--- a/platformio.ini
+++ b/platformio.ini
@@ -17,7 +17,8 @@ default_envs = attiny85
 platform = atmelavr
 board = attiny85
 framework = arduino
-upload_protocol = atmelice_isp
+; upload_protocol = atmelice_isp
+upload_protocol = dragon_hvsp
 board_build.f_cpu = 8000000L
 board_fuses.lfuse = 0xE2
 board_fuses.hfuse = 0xDF
